# kesla_project

./: README.md  test.txt  성광 note
exploration_save/: CMakeLists.txt  package.xml
exploration_save/launch/: exploration_save.launch
exploration_save/src/: main_node.cpp
exploration_save/txtfile/: odom_start.txt
final_result/: CMakeLists.txt  package.xml
final_result/launch/: final_result.launch
final_result/script/: final_result.py
frontier_exploration/launch/: no_global_map.launch
frontier_exploration/src/: explore_client.cpp  explore_server.cpp
kesla_msg/: CMakeLists.txt  package.xml
kesla_msg/srv/: DoneService.srv
mode_decider/: CMakeLists.txt  package.xml
mode_decider/include/mode_decider/: mode_decider.hpp
mode_decider/launch/: all.launch
mode_decider/src/: main_node.cpp  mode_decider.cpp
nav_control/: CMakeLists.txt  package.xml
nav_control/launch/: nav_control.launch
nav_control/src/: main_node.cpp
navigation/clear_costmap_recovery/src/: clear_costmap_recovery.cpp
navigation/map_server/: CMakeLists.txt
navigation/map_server/launch/: map_saver.launch
navigation/map_server/src/: map_saver.cpp
navigation/move_base/src/: move_base.cpp
navigation/navfn/src/: navfn_ros.cpp
navigation/rotate_recovery/src/: rotate_recovery.cpp
node_controller/: CMakeLists.txt  package.xml
node_controller/include/node_controller/: cpp_roslaunch.hpp  node_controller.hpp
node_controller/launch/: all.launch
node_controller/src/: cpp_roslaunch.cpp  main_node.cpp  node_controller.cpp
opencv/: package.xml
opencv/launch/: opencv.launch
opencv/scripts/: opencv.py  opencv_image.py
person_filtering/: CMakeLists.txt  package.xml
person_filtering/launch/: person_filtering.launch
person_filtering/scripts/: person_filtering.py
srv_test/: CMakeLists.txt  package.xml
srv_test/src/: main.cpp
traffic_robot_control/: CMakeLists.txt  package.xml
traffic_robot_control/launch/: control.launch
traffic_robot_control/src/: main_node.cpp
turtlebot3/turtlebot3_navigation/param/: costmap_common_params_burger.yaml  dwa_local_planner_params_burger.yaml  local_costmap_params.yaml  move_base_params.yaml
turtlebot3/turtlebot3_slam/config/: gmapping_params.yaml
turtlebot3/turtlebot3_slam/launch/: turtlebot3_frontier_exploration.launch  turtlebot3_hector.launch
